[package]
name = "tiny-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum={ version = "0.6.18", features = ["macros", "tracing"] }
tokio = { version = "1.21", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
headers = "0.3"
log = "0.4.17"
log4rs = "1.1.1"
